<resources>
    <string name="app_name">Imuno</string>

    <!--Activity Titles-->
    <string name="main_activity_label">Home</string>
    <string name="login_activity_label">Login</string>
    <string name="register_activity_label">Register</string>
    <string name="details_activity_label">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="reset_activity_label">Reset Password</string>


    <!--Content descriptors-->
    <string name="logo_content_description">Logo of imuno app</string>
    <string name="details_infographic_content_description">infographic for details</string>
    <string name="settings_button_content_description">Go to Settings</string>
    <string name="no_connection_graphic_content_discription">No connection graphic</string>


    <!--Button Labels-->
    <string name="login_button_label">Login</string>
    <string name="register_button_label">Register</string>
    <string name="forgot_password_label">Forgot Password?</string>
    <string name="next_button_label">Next</string>
    <string name="finish_button_label">Finish</string>
    <string name="sign_out_label">Sign Out</string>
    <string name="settings_action_label">Settings</string>
    <string name="caucasian_radio_button_label">Caucasian</string>
    <string name="middle_eastern_radio_button_label">Middle Eastern</string>
    <string name="asian_radio_button_label">Asian</string>
    <string name="african_radio_button_label">African</string>
    <string name="personal_information_menu_label">Personal Information</string>
    <string name="reset_button_label">Reset</string>
    <string name="try_again_button_label">Try Again</string>


    <!-- TextField Labels -->
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="age_label">Age</string>
    <string name="weight_label">Weight (kg)</string>
    <string name="level_label">Current vitamin D level (ng/ml)</string>
    <string name="minutes_label">Minutes</string>
    <string name="height_label">Height (cm)</string>


    <!--Units Labels -->
    <string name="ng_ml_units_label">ng/ml</string>
    <string name="iu_units_label">I.U</string>


    <!-- DB names and keys -->
    <string name="register_pager_position_key">position</string>
    <string name="db_collection">users</string>
    <string name="user_key">user</string>
    <string name="age_key">age</string>
    <string name="weight_key">weight</string>
    <string name="level_key">level</string>
    <string name="minutes_key">minutes</string>
    <string name="shared_preference_key">Settings</string>
    <string name="refill_day_shared_preference_key">refillDay</string>


    <!-- Helper Text-->
    <string name="password_helper_text">Password must be 8 characters long</string>
    <string name="quit_application_message">Press back again to quit</string>
    <string name="vitamin_D_level_checkbox_label">Do you know your current vitamin D Level?</string>
    <string name="minutes_text_label">How many minutes a day do you spend in the sun?</string>
    <string name="days_till_dose_prefix_label">Take your dose in</string>
    <string name="days_till_dose_suffix_label">days</string>
    <string name="reset_password_message_label">Reset password email sent</string>
    <string name="take_dose_now_label">Take your dose today</string>


    <!-- Card View Titles and Subtitles -->
    <string name="total_amount_item_label">Total amount of vitamin D to refill</string>
    <string name="daily_amount_title_label">Recommended Daily Dosage</string>
    <string name="main_card_view_title_label">Target Vitamin D Level</string>
    <string name="main_card_view_subtitle_label">Measured in ng/ml</string>


    <!-- Error Messages-->
    <string name="invalid_email_error">Invalid Email</string>
    <string name="invalid_password_error">Invalid Password</string>
    <string name="age_error">Invalid Age</string>
    <string name="weight_error">Invalid Weight</string>
    <string name="level_error">Invalid Vitamin D Level</string>
    <string name="hour_error">Invalid Time</string>
    <string name="add_to_db_error">There was an error, Please login again</string>
    <string name="account_creation_error">Account creation failed, try again</string>
    <string name="failed_login_error">Failed to log in, check credentials and try again</string>
    <string name="height_error">Invalid Height</string>


    <!-- Description Text -->
    <string name="details_information_text">To calculate your daily Vitamin D intake we need to collect a few pieces of information from you in the following screen. Don’t worry we will never use your medical data for anything other than providing you with the right information to protect you immune system.</string>


    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Preferences -->
    <string name="notification_header">Notifications</string>
    <string name="notification_title_label">Send weekly reminder</string>
    <string name="notification_summary_label">Send a weekly reminder to take your dose of vitamin D</string>
    <string name="notification_preference_key">notification_preference_key</string>
    <string name="reminder_day_title_label">Reminder day</string>
    <string name="sign_out_key">sign_out_key</string>


    <!-- Notification -->
    <string name="channel_name">Reminders</string>
    <string name="channel_description">Show reminders to take your vitamin dosage.</string>
    <string name="notification_reminder_body_label">Don\'t forget to take your vitamin D today!</string>
    <string name="notification_reminder_title_label">Vitamin Dosage Reminder</string>

</resources>